--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -22,7 +22,7 @@
   <property name="windowIcon">
    <iconset theme="camera-photo"/>
   </property>
-  <widget class="QWidget" name="centralwidget">
+  <widget class="QOpenGLWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_6">
     <property name="leftMargin">
      <number>0</number>
