--- a/pages/printer/bedmesh/probed/item/probedmeshitemframe.ui
+++ b/pages/printer/bedmesh/probed/item/probedmeshitemframe.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>BedMeshItemFrame</class>
- <widget class="QFrame" name="BedMeshItemFrame">
+ <class>ProbedMeshItemFrame</class>
+ <widget class="QFrame" name="ProbedMeshItemFrame">
   <property name="geometry">
    <rect>
     <x>0</x>
