--- a/pages/printer/printerpage.ui
+++ b/pages/printer/printerpage.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>PrinterPage</class>
- <widget class="QFrame" name="PrinterPage">
+ <widget class="QOpenGLWidget" name="PrinterPage">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -1389,7 +1389,7 @@
                      </widget>
                     </item>
                     <item row="3" column="0" colspan="2">
-                     <widget class="QPushButton" name="pushButton_2">
+                     <widget class="QPushButton" name="restartKlipperButton">
                       <property name="minimumSize">
                        <size>
                         <width>0</width>
@@ -1446,19 +1446,6 @@
                  <item row="3" column="0" colspan="2">
                   <widget class="QWidget" name="widget_6" native="true">
                    <layout class="QGridLayout" name="gridLayout_14">
-                    <item row="0" column="4">
-                     <widget class="QToolButton" name="settingsButton">
-                      <property name="minimumSize">
-                       <size>
-                        <width>100</width>
-                        <height>100</height>
-                       </size>
-                      </property>
-                      <property name="text">
-                       <string>...</string>
-                      </property>
-                     </widget>
-                    </item>
                     <item row="0" column="1">
                      <widget class="QToolButton" name="browserButton">
                       <property name="minimumSize">
@@ -1475,8 +1462,8 @@
                       </property>
                      </widget>
                     </item>
-                    <item row="0" column="3">
-                     <widget class="QToolButton" name="terminalButton">
+                    <item row="0" column="2">
+                     <widget class="QToolButton" name="gcodeButton">
                       <property name="minimumSize">
                        <size>
                         <width>100</width>
@@ -1488,7 +1475,7 @@
                       </property>
                      </widget>
                     </item>
-                    <item row="1" column="0" colspan="5">
+                    <item row="2" column="0" colspan="5">
                      <spacer name="verticalSpacer_2">
                       <property name="orientation">
                        <enum>Qt::Orientation::Vertical</enum>
@@ -1504,14 +1491,34 @@
                       </property>
                      </spacer>
                     </item>
-                    <item row="0" column="2">
-                     <widget class="QToolButton" name="gcodeButton">
+                    <item row="0" column="4">
+                     <widget class="QToolButton" name="settingsButton">
                       <property name="minimumSize">
                        <size>
                         <width>100</width>
                         <height>100</height>
                        </size>
                       </property>
+                      <property name="text">
+                       <string>...</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="0" column="3">
+                     <widget class="QToolButton" name="terminalButton">
+                      <property name="minimumSize">
+                       <size>
+                        <width>100</width>
+                        <height>100</height>
+                       </size>
+                      </property>
+                      <property name="text">
+                       <string>...</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="1" column="3">
+                     <widget class="QToolButton" name="toolButton">
                       <property name="text">
                        <string>...</string>
                       </property>
